test/tests/stages/15_arrays_and_pointer_arithmetic/valid/libraries/global_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: arr
        CCompoundInit: 
          List[4]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 1
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 2
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 3
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 4
                None: 
              None: 
          None: 
        Array: 
          TLong: 4
          Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: double_each_element
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    Int: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CSubscript: 
                              CVar: 
                                TIdentifier: arr
                                None: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              None: 
                            CBinary: 
                              CMultiply: 
                              CSubscript: 
                                CVar: 
                                  TIdentifier: arr
                                  None: 
                                CVar: 
                                  TIdentifier: i
                                  None: 
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 2
                                None: 
                              None: 
                            None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
