test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/incompatible_elem_type_static_compound_init.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: arr
        CCompoundInit: 
          List[3]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 0
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 0
                None: 
              None: 
            CSingleInit: 
              CConstant: 
                CConstDouble: 
                  TDouble: 1.000000
                None: 
              None: 
          None: 
        Array: 
          TLong: 3
          Pointer: 
            Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
